--- a/src/app/components/about/about.css
+++ b/src/app/components/about/about.css
@@ -2,7 +2,7 @@
   display: grid;
   position: relative;
   grid-template-columns: 50% 50%;
-  padding: 4rem 5rem;
+  padding: 6rem 5rem 4rem 5rem; /* Top padding increased for visibility */
   margin: auto;
 }
 .commonSec {
