--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -1,22 +1,25 @@
+section {
+  display: block;
+  unicode-bidi: isolate;
+}
 .siteHeader {
   display: flex;
   background: white;
   border-radius: 0 0 15px 15px;
   box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.25);
-  margin: 0 3rem;
   padding: 6px 5rem;
   align-items: center;
-  z-index: 1;
-  position: sticky;
+  position: fixed;
   top: 0;
+  width: 100%;
+  z-index: 1000; /* Ensure it stays on top */
 }
+
 .siteHeader img {
   height: 60px;
   max-width: 100%;
 }
-img {
-  vertical-align: middle;
-}
+
 .siteHeader ul {
   display: flex;
   align-items: center;
@@ -62,4 +65,7 @@ img {
 }
 .socialSpan a {
   color: #ffa336;
+}
+.siteHeader ul li:nth-child(even) a {
+  color: #fc9d33;
 }
