--- a/src/app/components/hero-section/hero-section.css
+++ b/src/app/components/hero-section/hero-section.css
@@ -1,6 +1,7 @@
 .siteBody {
   z-index: 0;
   position: relative;
+  background: #63894c;
 }
 .ind .siteBody {
   margin-top: -82px;
@@ -32,4 +33,9 @@
   color: white;
   margin-top: 2rem;
   text-shadow: 3px 3px 4px #000;
+}
+.sec_divider {
+  width: 100%;
+  height: 10px;
+  background: #ffa336;
 }
