--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,23 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   padding: 0;
+  overflow-y: scroll;
 }
-.sec_divider {
-  width: 100%;
-  height: 10px;
-  background: #ffa336;
+::-webkit-scrollbar {
+  width: 14px;
+}
+::-webkit-scrollbar-track {
+  background: #f0f0ff;
+}
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(to bottom, #388e3c, #ff9800);
+}
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(to bottom, #388e3c, #f57c00);
 }
