--- a/src/app/components/client-reviews/client-reviews.html
+++ b/src/app/components/client-reviews/client-reviews.html
@@ -9,7 +9,7 @@
         <p>Very good place for renting dresses. Very good quality of dresses available at very reasonable price. Owner
           is also very helpful and professional. Highly recommend Krishna Fancy Dress and costume to everyone.. Thanks
         </p>
-        <h5>Ayush Vishwakarma</h5>
+        <h5>Anabella</h5>
       </div>
       <div class="categoryCard"><img
           src="https://imgs.search.brave.com/Bto5cOxaoXom8hL2beFxy2CV9azRNpNJm4azG_D_nX0/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly90aHVt/YnMuZHJlYW1zdGlt/ZS5jb20vYi9hc2lh/bi1ldGhuaWNpdHkt/ZmVtYWxlLWZhY2Ut/Y2FsbS1leHByZXNz/aW9uLXNlcmlvdXMt/a29yZWFuLXMtZ2ly/bC1jbGllbnQtbW9k/ZWwtYmxhY2stc21v/b3RoLWhhaXItcGVy/ZmVjdC1za2luLWFz/aWFuLWV0aG5pY2l0/eS0yNTMyODQ3MzYu/anBn"
